# rust-api

./: Cargo.toml  Readme.md
src/: main.rs  mod.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/api/handlers/: add_user_handler.rs  get_user_handler.rs  mod.rs  node.rs
src/db/: connection.rs  migrations.rs  mod.rs
