[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] } # Enable the serde feature
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", default-features = false, features = ["postgres", "runtime-actix-native-tls", "chrono"] }
tokio = { version = "1.0", features = ["full"] }