[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
argon2 = "0.6.0-pre.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", default-features = false, features = ["postgres", "runtime-actix-native-tls", "chrono"] }
tokio = { version = "1.0", features = ["full"] }